--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -5,6 +5,7 @@
 
 .titleLogo {
   width: 500px;
+  padding: 25px 5px;
 }
 
 .flowerLogo {
@@ -23,4 +24,93 @@
 
 .navBarDiv ul li .active {
   color: rgb(174, 192, 177);
+}
+
+#menuToggle {
+  display: block;
+  position: fixed;
+  top: 30px;
+  left: 20px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: rgb(59, 80, 63);
+  border-radius: 3px;
+  z-index: 1;
+
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+#menuToggle.active span:first-child {
+  transform: rotate(45deg) translate(1px, -4px);
+}
+
+#menuToggle.active span:last-child {
+  transform: rotate(-45deg);
+}
+
+#menuToggle.active span:nth-last-child(2) {
+  opacity: 0;
+}
+
+#menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+
+#menu li {
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+#menu.active {
+  transform: none;
+}
+
+@media (max-width: 576px) {
+  #mainMenu {
+    display: none;
+  }
+  .flowerLogo {
+    width: 150px;
+  }
+  .titleLogo {
+    padding: 20px 5px;
+  }
+}
+
+@media (min-width: 576px) {
+  #menuToggle {
+    display: none;
+  }
 }
