--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -12,7 +12,7 @@
 }
 
 .firstSection img {
-  width: 150%;
+  width: 100%;
   border-radius: 10%;
 }
 
@@ -26,6 +26,7 @@
 }
 .firstSection button:hover {
   border: 2px solid rgb(59, 80, 63);
+  color: rgb(59, 80, 63);
 }
 
 .tea {
@@ -41,7 +42,7 @@
 .tea button {
   background-color: rgb(59, 80, 63);
   border-radius: 5px;
-  padding: 5px 20px;
+  padding: 8px 24px;
   border: 1px solid;
   color: white;
 }
@@ -50,5 +51,21 @@
   color: rgb(174, 192, 177);
 }
 
-@media (max-width: 576px) {
+.smallScreen {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .bigScreen {
+    display: none;
+  }
+  .smallScreen {
+    display: block;
+  }
+  .firstSection {
+    padding: 50px 70px;
+  }
+  .tea {
+    padding: 50px 70px;
+  }
 }
