--- a/src/assets/css/tea.css
+++ b/src/assets/css/tea.css
@@ -38,6 +38,7 @@
   box-shadow: 3px 3px 10px 0px rgb(0 0 0 / 16%);
   border-radius: 20%;
   border: 2px solid transparent;
+  cursor: pointer;
 }
 
 .buyCard:hover {
@@ -46,4 +47,19 @@
 
 .buyCard img {
   width: 80%;
+}
+
+#boxBuy img {
+  border-radius: 50%;
+}
+
+.youMeTea button {
+  background-color: rgb(59, 80, 63);
+  border-radius: 5px;
+  padding: 8px 24px;
+  color: white;
+  box-shadow: 3px 3px 10px 0px rgb(0 0 0 / 50%);
+}
+.youMeTea button:hover {
+  color: rgb(174, 192, 177);
 }
