--- a/src/assets/css/walls.css
+++ b/src/assets/css/walls.css
@@ -1,4 +1,5 @@
-.walls h1 {
+.walls h1,
+.wallItem h1 {
   color: rgb(59, 80, 63);
   font-size: 60px;
 }
@@ -13,6 +14,7 @@
   cursor: pointer;
   position: relative;
 }
+
 .wallCard:hover {
   border: 2px solid rgb(59, 80, 63);
 }
@@ -22,4 +24,11 @@
   width: 100%;
   background-color: rgb(174, 192, 177);
   color: rgb(59, 80, 63);
+}
+
+.carouselImg {
+  height: 200px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
