--- a/src/assets/css/faq.css
+++ b/src/assets/css/faq.css
@@ -6,7 +6,8 @@
 .faq a {
   font-weight: bold;
 }
-.accordion {
+.accordion,
+.accordion__item {
   outline: none !important;
   border: 0 !important;
 }
